增加函数导出的方法

--- a/docs/golang/函数.md
+++ b/docs/golang/函数.md
@@ -44,3 +44,22 @@ if err != nil {
     panic(err)
 }
 defer f.Close()
+
+## 导出
+大写字母开头表示想要被其他.go文件看到的函数
+小写子母开头的是看不到的
+```golang
+package util
+
+func StringArrayToBytes(stringArray []string) []byte {
+	var result string
+	for _, s := range stringArray {
+		result += s
+	}
+	return []byte(result)
+}
+
+func parseRequest(request string) {
+
+}
+```
